--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "@mui/x-charts": "^8.6.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
@@ -25,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^3.0.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
